
Device specific changes/fixes
	* Graupner Polaron* - adapt number of transfered bytes to latest specification (Firmware 2.x required)
	* Graupner Ultra Duo Plus - fix missing update while reading battery data using device dialog
	* Graupner HoTT MDL Viewer plug-in update 9.4
	* Graupner HoTTAdapter2 - add missing call parsing GAM data while only a GAM is connected to receiver 
	* Junsi iCharger X6 - add initial release
	* Junsi iCharger X8 - add initial release
	* Junsi iCharger 406Duo - add initial release
	* Junsi iCharger* - prepare for upcoming FW release enabling Ri logging
	* GPS-Logger2 - update device selection picture
	* GPS-Logger3 - update device selection picture

History analysis

Version 3.3.5 - 20 Dec 2018
Generic changes/fixes
	* fix setting foreground color of status message
	* fix exception while copy curve into compare window
	* fix exception while cutting curve edges
	* fix hanging application shutdown while executing device thread
	* add migration hint for custom devices to add <device-name>*0 to device _use list
	* add hint if device folder creation fails
	* fix missing error message disabling device due to invalid XML
	* fix MAC OS copy to clip board capability
	* fix partial data table calculation for several devices 
	* fix reset measurement selection in curve selector context menu
	* fix measurement formatting based on record decimal format
	* fix measurement based on calculated record index
	* fix Windows missing color change with swt library update

Version 3.3.4 - 30 Nov 2018
Generic changes/fixes
	* fix ratio calculation triggered used capacity to reached motor altitude
	* update Java download URLs in Windows launcher
	* new device xsd version
	* make ready to execute using JRE 8 to 10
	* fix [sr #109555] CSV Export does not use decimal point separator
	* fix raw csv export 
	* fix exception while moving scaled curve display around start time stamp
	* fix adding KMZ export menu on device level